--- a/cassinoGame/index.html
+++ b/cassinoGame/index.html
@@ -44,7 +44,7 @@
     <div id="container_vitoria">
         <h1>Você Ganhou</h1>
         <p>Pegue aqui a sua coca</p>
-        <img src="Assets/Imgs/coca-600-ml.jpg" alt="">
+        <img src="Assets/Imgs/dollynho-presente.webp" alt="">
 
         <button onclick="playAgain()">Jogar novamente</button>
     </div>
